# smartscheduler

./: .dockerignore  .env.example  .gitignore  ANALISE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
accounts/: admin.py  models.py
accounts/tests/: test_accounts.py
app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
apps/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/curriculum/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/people/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/scheduling/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/schools/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
apps/tenants/: admin.py  apps.py  bootstrap.py  forms.py  models.py  signals.py
config/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
config/tests/: test_settings_grade_certa.py
designs/identity/: research-references.md
docs/: PRD-grade-certa.md  SDD-arquitetura-sistema-grade-certa.md  SDD-conceitual-grade-certa.md  estudo-de-caso-planilha-horario-fundamental-ii.md  modelagem-entidades-grade-certa.md  planejamento-geral-grade-certa.md  regras-negocio.md
docs/exemplos/: README.md  horario-fundamental-ii-referencia.xlsx
docs/sprints/: sprint-01-base-inicial.md  sprint-01-fundacao-tenancy-acesso.md  sprint-02-accounts-e-schools.md  sprint-02-estrutura-escolar.md  sprint-03-curriculo.md  sprint-04-pessoas.md  sprint-05-scheduling.md  sprint-06-auditoria-qualidade-estabilizacao.md  sprint-06-importacao-auditoria-hardening.md  sprint-07-correcao-cadastros-tenant-ux.md  sprint-08-solver-3-variantes.md  sprint-09-camada-sugestoes.md  (+1 more)
schools/: admin.py  apps.py  forms.py  middleware.py  mixins.py  models.py  urls.py  views.py
static/css/: base.css
templates/: base.html  home.html  landing.html
tests/: conftest.py  test_settings.py
(+84 files in other folders)
