[tool.poetry]
name = "smartschedule"
version = "0.1.0"
description = "Grade Certa — SaaS multi-tenant para criacao, validacao e otimizacao de grades horarias escolares"
authors = ["Thiago Azevedo <thiagoarvore@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^6.0"
psycopg2-binary = "^2.9"
django-tenants = "^3.10"
django-base-kit = "^0.1.4"
django-auditlog = "^3.4"
python-decouple = "^3.8"
whitenoise = "^6.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
pytest = "^8.0"
pytest-django = "^4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]